# AdventOfCode

./: README.md  helpers.py  pyproject.toml
2021/: 12.py  13.py  15.py  16.py  17.py  2.py  3.py  6.py  7.py  8.py  9.py
2021/1/: soluation.py
2021/10/: solution.py
2021/2/: pt1.py  pt2.py
2021/3/: pt1.py  pt2.py
2021/4/: board.py  solution.py
2021/5/: board.py  line.py  solution.py
2021/6/: solution.py
2021/7/: solution.py
2021/8/: digit.py  line.py  solution.py
2021/9/: matrix.py  point.py  solution.py
2022/: 01.py  02.py  03.py  04.py  05.py  06.py  puzzle_to_solve.py
adventofcode/: main.py
adventofcode/_2021/: 04.py  10.py  11.py  14.py
adventofcode/_2022/: start_day.py
adventofcode/_2022/solutions/: 02.py  04.py  05.py  06.py  07.py  11.py  15.py
adventofcode/_2023/solutions/: 01.py  02.py  03.py  04.py  05.py  07.py  09.py  10.py  12.py  17.py  20.py  21.py
adventofcode/_templates/: puzzle_to_solve.py
adventofcode/_templates/v20231201/: day.py.template
adventofcode/_templates/v20231204/: puzzle_to_solve.py
adventofcode/helpers/: base_matrix.py  config.py
src/_2021/: 01.py
src/_2022/: day.py.template  puzzle_to_solve.py
src/_2022/solutions/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  18.py
src/_2023/: day.py.template  puzzle_to_solve.py
src/_2023/solutions/: 01.py
src/adventofcode/_2020/solutions/: 11.py
src/adventofcode/_2021/: 05.py  13.py
src/adventofcode/_2022/: day.py.template
src/adventofcode/_2022/solutions/: 17.py
src/adventofcode/_2023/solutions/: 03.py  04.py  06.py  08.py  10.py  11.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  21.py
src/adventofcode/_2024/solutions/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
src/adventofcode/_2025/solutions/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
src/adventofcode/_templates/v20231204/: day.py.template  puzzle_to_solve.py
src/adventofcode/helpers/: base_matrix.py  base_matrix_v1.py  parsing.py
