[project]
name = "adventofcode"
version = "0.1.0"
description = "Personal solutions to the puzzles of Advent of Code"
authors = [{name = "Aucke Bos",email = "aucke.bos97@gmail.com"}]
dependencies = [
    "bitstring>=3.1.9,<4.0.0",
    "numpy>=1.21.4,<2.0.0",
    "black>=21.12b0,<22.0",
    "advent-of-code-data>=1.1.1,<2.0.0",
    "pandas>=1.5.2,<2.0.0",
    "browser-cookie3>=0.19.1",
    "word2number>=1.1,<2.0",
    "nltk>=3.8.1,<4.0.0",
    "click>=8.1.7,<9.0.0",
    "setuptools>=75.3.0",
    "ruff>=0.8.1",
]
requires-python = ">=3.8,<3.11"

[tool]

[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/adventofcode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
adventofcode = "adventofcode.main:cli"

